--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
@@ -10,7 +10,6 @@
   --color-noble-black-300: rgba(155, 156, 158, 1);
   --color-noble-black-400: rgba(104, 107, 110, 1);
   --color-noble-black-500: rgba(54, 58, 61, 1);
-  --color-noble-black-600: rgba(26, 29, 33, 1);
   --color-noble-black-700: rgba(19, 22, 25, 1);
   --color-noble-black-800: rgba(13, 15, 16, 1);
   --color-noble-black-900: rgba(6, 7, 8, 1);
@@ -77,7 +76,7 @@
   --color-red-power-600: rgba(208, 48, 47, 1);
   --color-red-power-900: rgba(47, 15, 14, 1);
 
-  --font-plus:"Plus Jakarta Sans", sans-serif;
+  --font-plus: "Plus Jakarta Sans", sans-serif;
 }
 
 @utility text-gradient-green-blue-500 {
