--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --color-noble-black-300: rgba(155, 156, 158, 1);
   --color-noble-black-400: rgba(104, 107, 110, 1);
   --color-noble-black-500: rgba(54, 58, 61, 1);
+  --color-noble-black-600: rgba(26, 29, 33, 1);
   --color-noble-black-700: rgba(19, 22, 25, 1);
   --color-noble-black-800: rgba(13, 15, 16, 1);
   --color-noble-black-900: rgba(6, 7, 8, 1);
