--- a/src/index.css
+++ b/src/index.css
@@ -198,8 +198,25 @@
   background: var(--color-noble-black-400);
 }
 
-body {
+@layer utilities {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+     /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+    }
+  }
+  
+body,html {
   font-family: var(--font-plus);
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 @keyframes spin {
   0% {
